--- a/common.gradle
+++ b/common.gradle
@@ -3,9 +3,12 @@ ext {
     java = ['javaVersion': JavaVersion.VERSION_1_8]
 
     lib = [
-            'mysql'      : 'mysql:mysql-connector-java',
-            'lombok'     : 'org.projectlombok:lombok',
-            'commonPools': 'org.apache.commons:commons-pool2:'
+            'mysql'       : 'mysql:mysql-connector-java',
+            'lombok'      : 'org.projectlombok:lombok',
+            'userAgent'   : 'eu.bitwalker:UserAgentUtils:1.21',
+            'commonsPools': 'org.apache.commons:commons-pool2:',
+            'commonsLang' : 'org.apache.commons:commons-lang3:'
+
     ]
 
     springBoot = [
@@ -14,6 +17,7 @@ ext {
             'aop'            : 'org.springframework.boot:spring-boot-starter-aop',
             'jpa'            : 'org.springframework.boot:spring-boot-starter-data-jpa',
             'jdbc'           : 'org.springframework.boot:spring-boot-starter-data-jdbc',
+            'rest'           : 'org.springframework.boot:spring-boot-starter-data-rest',
             'redis'          : 'org.springframework.boot:spring-boot-starter-data-redis',
             'hateoas'        : 'org.springframework.boot:spring-boot-starter-hateoas',
             'mail'           : 'org.springframework.boot:spring-boot-starter-mail',
