--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: xiaoMing
   datasource:
-    url: jdbc:mysql://localhost:3306/gak
+    url: jdbc:mysql://localhost:3306/gak?serverTimezone=GMT%2B8
     username: root
     password: 123456
     platform: mysql
@@ -21,3 +21,8 @@ logging:
     root: warn
   file: logs/xiaoMing.log
 
+security:
+  oauth2:
+    client:
+      client-id: xiaoMing
+      client-secret: $2a$10$ufiwbAbQII/4EX6Xai2CUuiibDBmRtH2FtUgANw/cWT3HGgoB186q
