--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   profiles:
     active: dev
+  application:
+    name: xiaoMing
 server:
   servlet:
     application-display-name: xiaoMing
