--- a/common.gradle
+++ b/common.gradle
@@ -8,9 +8,8 @@ ext {
             'userAgent'   : 'eu.bitwalker:UserAgentUtils:1.21',
             'commonsPools': 'org.apache.commons:commons-pool2:',
             'commonsLang' : 'org.apache.commons:commons-lang3:',
-            'fastjson'    : 'com.alibaba:fastjson:1.2.56'
-
-
+            'fastjson'    : 'com.alibaba:fastjson:1.2.56',
+            'qiniu'       : 'com.qiniu:qiniu-java-sdk:7.2.18'
     ]
 
     springBoot = [
