--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 //            rootProject.ext.springBoot.jdbc,
             rootProject.ext.lib.commonsPools,
             rootProject.ext.lib.commonsLang,
+            rootProject.ext.lib.commonsCollections4,
             rootProject.ext.lib.userAgent,
             rootProject.ext.lib.qiniu
     )
