--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,3 +46,10 @@ application:
     client-secret: $2a$10$Nww6ckqqJUg/botZzZDn1.8xZwTfW2n1mYE66lrUgn00KVzfe2T7C
     resource-id: xiaoMing
     jwt-signing-key: 123
+  validate:
+    email-code-min-legth: 4
+    email-code-max-legth: 4
+    email-code-validity-period: 30  # 邮箱验证码的有效时间，单位：分钟
+    mobile-code-min-length: 4
+    mobile-code-max-length: 4
+    mobile-code-validity-period: 30 # 手机验证码的有效时间，单位：分钟
